<resources>
	<string name="app_name">信息公告板</string>
	<string name="app_version">v1.1</string>
	<string name="board_title">公告板</string>
	<string name="news_title">Title</string>
	<string name="author">Author</string>
	<string name="publish_time">publishTime</string>
	<string name="news_photo">newsPhoto</string>
	<item name="news_type0" type="id" />
	<item name="news_type1" type="id" />
	<item name="news_type2" type="id" />
	<item name="news_type3" type="id" />
	<item name="news_type4" type="id" />
	<!-- Strings related to login -->
	<string name="prompt_userId">用户名</string>
	<string name="prompt_password">密码</string>
	<string name="action_sign_in">登录</string>
	<string name="action_sign_in_short">登录</string>
	<string name="login_failed">"登录失败"</string>
	<string name="github_url">https://github.com/Tyllllll/Board_toy</string>
	<string name="exit">退出登录</string>
	<string name="about">关于</string>
	<string name="update">检查新版本</string>
	<string name="toastMsg">当前已是最新版本</string>
	<string name="contact_us">联系我们：</string>
	<string name="email">Tyllllll@163.com</string>
	<string name="open_source">本项目开源于：</string>
	<string name="str_copyright">Copyright &#169; 2020 Tyllllll. All Rights Reserved.</string>
</resources>