<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:layout_width="108dp"
		android:layout_height="98dp"
		app:layout_constraintBottom_toTopOf="@+id/app_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.84000003"
		app:srcCompat="@mipmap/ic_launcher_round" />

	<TextView
		android:id="@+id/app_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="24sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.381" />

	<TextView
		android:id="@+id/app_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_version"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/app_name"
		app:layout_constraintVertical_bias="0.0" />

	<LinearLayout
		android:id="@+id/linearLayout3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="40dp"
		android:layout_marginEnd="40dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/app_version"
		app:layout_constraintVertical_bias="0.19999999">

		<include
			layout="@layout/base_line"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#B3FFFFFF" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:nestedScrollingEnabled="false"
			android:onClick="update"
			android:singleLine="false"
			android:text="@string/update"
			android:textColor="#000000"
			android:textSize="14sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="0dp"
				android:layout_marginBottom="20dp"
				android:autoLink="email"
				android:text="@string/contact_us"
				android:textColor="#616161"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				android:autoLink="email"
				android:text="@string/email" />
		</LinearLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginStart="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="0dp"
				android:layout_marginBottom="20dp"
				android:autoLink="email"
				android:gravity="center"
				android:text="@string/open_source"
				android:textColor="#616161"
				android:textSize="14sp" />

			<TextView
				android:id="@+id/gitUrl"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				android:autoLink="web"
				android:text="@string/github_url" />
		</LinearLayout>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_copyright"
		android:textColor="#9F9F9F"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
		app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>